metadata/force-app/main/default/objects/ccrz__E_Category__c/fields/ccrz__EndDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EndDate__c</fullName>
    <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
    <description>The end date for which this category is active. After this date the category will no longer be displayed.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>