metadata/force-app/main/default/objects/ccrz__E_Category__c/fields/ccrz__LongDesc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LongDesc__c</fullName>
    <description>Long description of the category, usually containing more formatted marketing content.</description>
    <label>Long Desc</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>