metadata/force-app/main/default/objects/ccrz__E_Category__c/fields/ccrz__ParentCategory__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ParentCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used when building a category hierarchy. Contains a reference to this same object, pointing to the parent of this entry</description>
    <label>Parent Category</label>
    <referenceTo>ccrz__E_Category__c</referenceTo>
    <relationshipLabel>E_Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>