metadata/force-app/main/default/objects/ccrz__E_Category__c/fields/ccrz__ProductCount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductCount__c</fullName>
    <description>Formula - set to the number of products within the category</description>
    <label>Product Count</label>
    <summaryForeignKey>ccrz__E_ProductCategory__c.ccrz__Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>