metadata/force-app/main/default/objects/ccrz__E_Category__c/fields/ccrz__ShortDescRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortDescRT__c</fullName>
    <description>Short category description as a rich text field.</description>
    <label>ShortDescRT</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>